--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=queue
+
+#Config for rabbit mq with spring
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+
+logging.level.web=debug
+spring.amqp.deserialization.trust.all=true
